Update Swagger test API
