# internal/handlers/product_handler.go
@@ -16,6 +16,15 @@ func NewProductHandler(productService *services.ProductService) *ProductHandler 
 	return &ProductHandler{productService: productService}
 }
 
+// GetProducts godoc
+// @Summary      Retrieve a list of products
+// @Description  Get all products from the database
+// @Tags         Products
+// @Accept       json
+// @Produce      json
+// @Success      200  {array}   models.Product
+// @Failure      500  {object}  map[string]interface{}
+// @Router       /products [get]
 func (h *ProductHandler) GetProducts(c *gin.Context) {
 	products, err := h.productService.GetProducts()
 	if err != nil {
@@ -26,6 +35,17 @@ func (h *ProductHandler) GetProducts(c *gin.Context) {
 	c.JSON(http.StatusOK, products)
 }
 
+// CreateProduct godoc
+// @Summary      Create a new product
+// @Description  Add a new product to the database
+// @Tags         Products
+// @Accept       json
+// @Produce      json
+// @Param        product  body      models.Product  true  "Product details"
+// @Success      201      {object}  models.Product
+// @Failure      400      {object}  map[string]interface{}
+// @Failure      500      {object}  map[string]interface{}
+// @Router       /products [post]
 func (h *ProductHandler) CreateProduct(c *gin.Context) {
 	var product models.Product
 
